Use pdftotext to create nie:plainTextContent for PDF files.

Strigi's pdf handling is still a bit problematic. There is a lot of pdf
files out there which it cannot handle. Thus, we now employ a hack and
call pdftotext for each pdf file to extract the plain text. That way
searching by content sould work nicely now.

BUG: 231936

FIXED-IN: 4.7.3